# poc2_pdf_multiagent

./: README.md  pyproject.toml
src/poc2_pdf_multiagent/: crew.py  main.py
src/poc2_pdf_multiagent/config/: agents.yaml  tasks.yaml
